--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "casper",
+    "name": "ghost-theme-next",
     "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
-    "demo": "https://demo.ghost.io",
-    "version": "2.11.1",
+    "demo": "https://cmlanche.com",
+    "version": "0.1beta",
     "engines": {
         "ghost": ">=2.0.0",
         "ghost-api": "v2"
     },
     "license": "MIT",
     "screenshots": {
-        "desktop": "assets/screenshot-desktop.jpg",
-        "mobile": "assets/screenshot-mobile.jpg"
+        "desktop": "assets/screenshot-desktop.png",
+        "mobile": "assets/screenshot-mobile.png"
     },
     "scripts": {
         "dev": "gulp",
@@ -22,9 +22,9 @@
         "postship": "git fetch && gulp release"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "cmlanche",
+        "email": "1204833748@qq.com",
+        "url": "https://cmlanche.com"
     },
     "gpm": {
         "type": "theme",
@@ -36,14 +36,14 @@
     "keywords": [
         "ghost",
         "theme",
-        "ghost-theme"
+        "ghost-theme-next"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/cmlanche/ghost-next-theme"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/cmlanche/ghost-next-theme/issues",
+    "contributors": "https://github.com/cmlanche/ghost-next-theme/graphs/contributors",
     "devDependencies": {
         "@tryghost/release-utils": "0.3.2",
         "autoprefixer": "9.6.1",
