--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ghost-theme-next",
     "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
     "demo": "https://cmlanche.com",
-    "version": "0.1beta",
+    "version": "0.1",
     "engines": {
         "ghost": ">=2.0.0",
         "ghost-api": "v2"
@@ -61,26 +61,6 @@
         "pump": "3.0.0"
     },
     "config": {
-        "posts_per_page": 25,
-        "image_sizes": {
-            "xxs": {
-                "width": 30
-            },
-            "xs": {
-                "width": 100
-            },
-            "s": {
-                "width": 300
-            },
-            "m": {
-                "width": 600
-            },
-            "l": {
-                "width": 1000
-            },
-            "xl": {
-                "width": 2000
-            }
-        }
+        "posts_per_page": 10
     }
 }
